--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Coming Soon</title>
+  <title>Mood Mosaic</title>
   <style>
     /* 1) Base reset and sizing */
     *, *::before, *::after { box-sizing: border-box; } /* ensures predictable scaling */  /* [5] */
