--- a/index.html
+++ b/index.html
@@ -4,114 +4,113 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mood Mosaic</title>
+  <!-- Google Fonts Montserrat -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet" />
   <style>
-    /* 1) Base reset and sizing */
-    *, *::before, *::after { box-sizing: border-box; } /* ensures predictable scaling */  /* [5] */
-    html, body { height: 100%; margin: 0; }
-
-    body {
-      min-height: 100svh; /* small-viewport height for mobile browser UI */ /* [5] */
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      position: relative;
-      overflow: hidden; /* no scroll caused by absolute elements over video */ /* [5] */
+    html, body {
+      height: 100%;
+      margin: 0;
     }
-
-    /* 2) Fullscreen video background */
+    body {
+      min-height: 100svh;
+      font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+      font-weight: 500;
+      font-style: normal;
+      position: relative;
+      overflow: hidden;
+    }
     #background-video {
       position: fixed;
-      inset: 0;              /* shorthand for top/right/bottom/left: 0 */
+      inset: 0;
       width: 100vw;
-      height: 100svh;        /* use svh to avoid iOS address bar jumps */
-      object-fit: cover;     /* cover viewport responsively */ /* [1][5] */
+      height: 100svh;
+      object-fit: cover;
       z-index: -1;
     }
-
-    /* 3) Header and Footer (overlay) */
     header, footer {
-      position: fixed;       /* stay pinned on resize/scroll */ /* [20] */
-      left: 0;
-      width: 100%;
-      text-align: center;
-      color: #222;
-      letter-spacing: 0.5px;
-      pointer-events: none;  /* overlay doesn’t block taps; remove if links are added */
-      text-shadow: 0 1px 2px rgba(255,255,255,0.7), 0 0 12px rgba(255,255,255,0.4); /* improve contrast on bright frames */ /* [13] */
-    }
-    header { top: 0; padding: 2.5vh 1rem 1.2vh; font-size: clamp(18px, 2.4vw, 32px); } /* fluid type */ /* [10] */
-    footer { bottom: 0; padding: 1.2vh 1rem 2.8vh; font-size: clamp(14px, 1.6vw, 22px); }
-
-    /* 4) Center logo block */
-    .logo-center {
       position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      left: 0;
+      width: 100vw;
       display: flex;
-      align-items: center;
       justify-content: center;
-      padding: 2vw;
-      max-width: 92vw;
-      max-height: 70vh; /* keep clear of header/footer on small screens */ /* [8] */
+      align-items: center;
+      text-align: center;
+      pointer-events: none;
+      z-index: 2;
+      padding: 0 1rem;
+      box-sizing: border-box;
     }
-    .logo-center img, .logo-center svg {
-      width: min(56vw, 520px);  /* fluid width with a sensible cap */
-      height: auto;
+    header {
+      top: 0;
+      height: 12vh;
     }
-
-    /* 5) Mobile tweaks */
-    @media (max-width: 600px) {
-      header { padding-top: 2.2vh; }
-      footer { padding-bottom: 2.6vh; }
-      .logo-center img, .logo-center svg { width: min(72vw, 420px); } /* scale down a bit more */
-    }
-
-    /* 6) Tall/narrow devices (e.g., 19.5:9) */
-    @media (max-aspect-ratio: 9/16) {
-      .logo-center { max-height: 60vh; }
+    footer {
+      bottom: 0;
+      height: 12vh;
     }
 
-    /* 7) Fallback: when video can’t autoplay on some mobiles */
-    .no-video-bg {
-      background: center / cover no-repeat url('poster.jpg'); /* provide a poster image */
+    /* Header Text with Gradient */
+    .gradient-text {
+      font-size: clamp(1.8rem, 5vw, 4rem);
+      line-height: 1;
+      letter-spacing: 0;
+      background: linear-gradient(89.96deg, #AA3FFF 34.15%, #F8522E 93.41%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      color: transparent;
+      user-select: none;
+      white-space: nowrap;
+      font-weight: 500;
+      font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+      font-style: normal;
+      margin: 0;
+    }
+
+    /* Footer Text Black */
+    .footer-text {
+      font-size:  clamp(1.4rem, 4vw, 4rem);
+      line-height: 1;
+      letter-spacing: 0;
+      color: #000000;
+      user-select: none;
+      white-space: nowrap;
+      font-weight: 500;
+      font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+      font-style: normal;
+      margin: 0;
+    }
+
+    /* Small screen tweaking */
+    @media (max-width: 480px) {
+      header, footer {
+        height: auto;
+        padding: 1rem 1.5rem;
+      }
+      .gradient-text{
+        white-space: normal;
+        font-weight: 600;
+        line-height: 1.2;
+        font-size: clamp(0.8rem, 8vw, 2rem);
+      }
+      .footer-text {
+        white-space: normal;
+        font-weight: 600;
+        line-height: 1.2;
+        font-size: clamp(1.4rem, 3vw, 3rem);
+      }
     }
   </style>
 </head>
 <body>
-  <!-- Video Background -->
-  <video id="background-video" class="" autoplay muted loop playsinline
-         poster="poster.jpg"> <!-- poster helps initial render on mobile --> <!-- [2][5] -->
-    <source src="your-video.webm" type="video/webm">optional modern format <!-- [5] -->
+  <video id="background-video" autoplay muted loop playsinline>
     <source src="web-prototype(no-text).mp4" type="video/mp4">
-    <!-- If video fails, body can receive .no-video-bg class via JS -->
   </video>
-
-  <header>Mood Mosaic</header>
-
-  <div class="logo-center">
-    <!-- Replace with your real logo (img or SVG). Example SVG placeholder: -->
-    <!-- <svg viewBox="0 0 800 400" width="400" height="200" aria-label="Company Logo">
-      <polyline points="150,300 350,100 550,300" style="fill:none;stroke:#FF5733;stroke-width:20" />
-      <polygon points="250,300 350,180 450,300" style="fill:#DA44AE"/>
-      <polygon points="350,300 450,180 550,300" style="fill:#DA44AE"/>
-      <polygon points="375,275 470,325 400,325" style="fill:#9747FF"/>
-    </svg> -->
-  </div>
-
-  <footer>Coming Soon...</footer>
-
-  <script>
-    // Optional enhancement: if video fails (e.g., data saver), swap to poster background
-    (function(){
-      const v = document.getElementById('background-video');
-      const onFail = () => document.body.classList.add('no-video-bg'); // [5]
-      // If the video errors or is blocked, use fallback
-      v.addEventListener('error', onFail, { once: true });
-      // On some mobiles, autoplay may be prevented; test play promise
-      const playPromise = v.play?.();
-      if (playPromise && typeof playPromise.then === 'function') {
-        playPromise.catch(onFail);
-      }
-    })();
-  </script>
+  <header>
+    <h1 class="gradient-text">MOOD MOSAIC</h1>
+  </header>
+  <footer>
+    <h2 class="footer-text">LAUNCHING SOON</h2>
+  </footer>
 </body>
 </html>
